# MyAdventureGame

./: .gitignore  CMakeLists.txt
game/: CMakeLists.txt
game/include/Game/: Player.h  Sword.h
game/src/: Enemy.cpp  Level.cpp  Player.cpp  Sword.cpp  main.cpp
levels/: level1.json
